<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/black"
    android:orientation="vertical">

    <TextView
        android:id="@+id/backToHomeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawablePadding="6dp"
        android:fontFamily="@font/roboto_regular"
        android:padding="8dp"
        android:text="@string/lists"
        android:textColor="@color/light_blue"
        android:textSize="16sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/arrow_left" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/today_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="@font/roboto_bold"
                android:padding="8dp"
                android:text="@string/today"
                android:textColor="@color/light_blue"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/today_text"
                android:layout_marginHorizontal="16dp"
                android:orientation="vertical"
                android:padding="8dp">

                <!-- Morning Section -->
                <TextView
                    android:id="@+id/text_morning"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:paddingBottom="8dp"
                    android:text="@string/morning"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_morning"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:visibility="gone" />

                <!-- Afternoon Section -->
                <TextView
                    android:id="@+id/text_afternoon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:paddingBottom="8dp"
                    android:text="@string/afternoon"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_afternoon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:visibility="gone" />

                <!-- Tonight Section -->
                <TextView
                    android:id="@+id/text_tonight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:paddingBottom="8dp"
                    android:text="@string/tonight"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="18sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_tonight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>