<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:background="@android:color/transparent"
    android:orientation="horizontal"
    android:padding="16dp">

    <!-- RadioButton for selection -->
    <RadioButton
        android:id="@+id/radio_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/darker_gray" />

    <!-- Container for task details -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingStart="12dp">

        <!-- Task title -->
        <TextView
            android:id="@+id/fetched_task_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/reminder_title"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!-- Container for additional task info -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <!-- App name or metadata -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:paddingVertical="4dp"
                android:text="@string/app_name"
                android:textColor="#84FFFFFF"
                android:textSize="14sp" />

            <!-- Task time -->
            <TextView
                android:id="@+id/fetched_task_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingHorizontal="2dp"
                android:paddingVertical="4dp"
                android:text="@string/_9_00_am"
                android:textColor="@android:color/holo_red_light"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
